# flet-share-plus

./: pyproject.toml
examples/flet_share_plus_example/: pyproject.toml
examples/flet_share_plus_example/src/: main.py
src/flet_share_plus.egg-info/: requires.txt
src/flutter/flet_share_plus/: README.md  pubspec.yaml
src/flutter/flet_share_plus/lib/: flet_share_plus.dart
src/flutter/flet_share_plus/lib/src/: flet_share_plus.dart
