[project]
name = "flet-share-plus"
version = "0.1.1"
description = "FletSharePlus control for Flet"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Flet contributors", email = "you@example.com" }
]
dependencies = [
    "flet>=0.70.0.dev5774",
]

[project.urls]
Homepage = "https://flet.dev"
Documentation = "https://github.com/ayamnash/sharep"
Repository = "https://github.com/ayamnash/sharep"
Issues = "https://github.com/ayamnash/sharep/issues"

[tool.setuptools.package-data]
"flutter.flet_share_plus" = ["**/*"]

[tool.uv]
dev-dependencies = [
    "flet[all]==0.70.0.dev5774",
    "mkdocs", 
    "mkdocs-material",
    "mkdocstrings[python]"
]

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.70.0.dev5774"}
mkdocs = "*"
mkdocstrings = { extras = ["python"], version = "*" }
mkdocs-material = "*"

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
