[project]
name = "flet-share-plus"
version = "0.1.1"
description = "FletSharePlus control for Flet"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Flet contributors", email = "hello@flet.dev" }
]
dependencies = [
    "flet>=0.28.3",
]

[project.urls]
Homepage = "https://flet.dev"
Documentation = "https://github.com/a1y9/flet-share-plus"
Repository = "https://github.com/a1y9/flet-share-plus"
Issues = "https://github.com/a1y9/flet-share-plus/issues"

[tool.setuptools.package-data]
"flutter.flet_share_plus" = ["**/*"]

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
    
]

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.70.0.dev5774"}

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
